cargo-features = ["edition2021"]

[package]
name = "photo_frame"
version = "0.1.0"
authors = ["Sam Nalty"]
edition = "2018"
resolver="2"

[dependencies]
iced = { version = "0.4", features = ["default"] }
futures = "0.3.24"
flame = "0.2.2"
flamer = "0.4.0"
rusqlite = "0.28.0"
clap = "3.2.22"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
mime = "0.3.16"
tokio = { version = "1", features = ["full"] }
rocket = "0.5.0-rc.2"
tokio-rusqlite = "0.3.0"

[[bin]]
name = "my_bin"
path = "main.rs"

[[bin]]
name = "load-examples"
path = "load_examples.rs"